<resources>
    <string name="app_name">DESTY</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Search</string>
    <string name="tab_text_3">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="register">Haven\'t registered yet?  Register now</string>
    <string name="register_now">Register Now</string>
    <string name="map">Map</string>
    <string name="home_page">Home Page</string>
    <string name="menu">Menu</string>
    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!--    Places-->
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>

    <!--    Route-->
    <string name="add_route">Add Route</string>
    <string name="save_route">Start Saving Route</string>
    <string name="finish_route">Finish Route</string>
    <string name="point_img">Upload Image</string>
    <string name="done">Done</string>
    <string name="point_name">Point Name</string>
    <string name="fill_point_desc">Point Snippet</string>
    <string name="route_name">Route Name</string>
    <string name="fill_route_desc">Route Snippet</string>
    <string name="publisher">Publisher</string>
    <string name="rating">Rating</string>
    <string name="comments">Comments</string>
    <string name="show_in_map">Show In Map</string>
    <string name="show_route_info">Show Route Info</string>
    <string name="add_route_to_list">Add to List</string>

    <!--    Profile-->
    <string name="apply">Apply</string>
    <string name="changeImg">Change Image</string>
    <string name="new_name">New Profile Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Profile Name</string>
    <string name="routes">My Routes</string>

<!--    FollowList-->
    <string name="follow_list">Follow List</string>

<!--    Lists-->
    <string name="lists">Lists</string>

<!--    Search-->
    <string name="search_keyword">Keyword</string>
    <string name="search">Search</string>
    <string name="search_res">Search Results</string>

<!--    Publisher Info-->
    <string name="publisher_name">Publisher Name</string>
    <string name="follow_publisher">Follow Publisher</string>
    <string name="bio">Bio</string>
    <string name="publisher_routes">Publisher Routes</string>

<!--    Comments-->

    <string-array name="den">
        <item>United States</item>
        <item>Turkey</item>
    </string-array>
</resources>