<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:textColor="@color/black"
                android:inputType="text"
                android:hint="@string/point_name"
                android:id="@+id/pointName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:textColor="@color/black"
                android:id="@+id/pointDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fill_point_desc"
                android:inputType="text"/>
            <Button
                android:id="@+id/point_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>



